--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -2,12 +2,12 @@
 
 \newcommand{\Approvatore}{Giovanni Grigoletto}
 \newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto}
-\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Edoardo Caregnato}
+\newcommand{\Verificatori}{Alessio Trevisan \newline Edoardo Caregnato \newline Giovanni Grigoletto}
 \newcommand{\Responsabile}{}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{2.0.0}
 
 \newcommand{\Distribuzione}{
 \proponente{} \newline
