--- a/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
@@ -2,11 +2,11 @@
 
 \newcommand{\Approvatore}{Giovanni Grigoletto}
 \newcommand{\Redattori}{Andrea De Tomasi \newline Abdelwahad Kandoul}
-\newcommand{\Verificatori}{Alessio Trevisan \newline Filippo Pinton}
+\newcommand{\Verificatori}{Alessio Trevisan \newline Edoardo Caregnato \newline Giovanni Grigoletto}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{2.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Imola Informatica S.p.A \newline Sweleven}
 
