--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -9,14 +9,19 @@
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                          \\
 
         % usare \verificatore per indicare verificatore
-        % usare \redattore per indicare redatore
+        % usare \redattore per indicare redattore
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
+        2.0.0                   &2021-01-10                                        & Approvazione                                   &Giovanni Grigoletto & \responsabile{}\\
+        1.1.0                  &2021-01-06                                       & Verifica                            & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto &\verificatore{}\\
+        1.0.5                   &2021-01-05                                        & Stesura §4                              & Andrea De Tomasi & \verificatore{} \\
+        1.0.4                  & 2021-01-04                                       & Stesura appendice §A e §B                          & Abdelwahad kandoul & \verificatore{} \\
+        1.0.3                  & 2021-01-03                                       & Stesura §3                            & Abdelwahad kandoul & \verificatore{} \\
         1.0.0                   &2021-01-10                                        & Approvazione                                   &Giovanni Grigoletto & \responsabile{}\\
-        0.1.0                  & 2021-01-06                                       & Verifica                            & Alessio Trevisan, Filippo Pinton &\verificatore{}\\
+        0.1.0                  &2021-01-06                                       & Verifica                            & Alessio Trevisan, Filippo Pinton &\verificatore{}\\
         0.0.5                   &2021-01-05                                        & Stesura §4                              & Andrea De Tomasi & \verificatore{} \\
-        0.0.4                  & 2021-01-04                                       & Stesura Appendice §A e §B                          & Abdelwahad kandoul & \verificatore{} \\
+        0.0.4                  & 2021-01-04                                       & Stesura appendice §A e §B                          & Abdelwahad kandoul & \verificatore{} \\
         0.0.3                  & 2021-01-03                                       & Stesura §3                            & Abdelwahad kandoul & \verificatore{} \\
         0.0.2                  & 2021-01-02                                       & Stesura §2                              & Andrea De Tomasi & \verificatore{} \\
         0.0.1                  & 2021-01-01                                       & Stesura §1                            & Abdelwahad kandoul & \verificatore{} \\
