--- a/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
@@ -6,10 +6,13 @@
     \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito backend}}  &\textcolor{\secondaryColor}{\textbf{requisiti webapp admin}}&\textcolor{\secondaryColor}{\textbf{requisito app utenti}}&\textcolor{\secondaryColor}{\textbf{costo tot. in euro}}\\ \endhead
     {Incremento 1 integrazione blockchain} & {R-numero-D-I } & {10 } & {10}&  {520}\\
     {Incremento 2 app Android lettura \glo{NFC}} & {} & {}& {}& {}\\
-    {Incremento 3 login app} & {} & {}& {}& {}\\
-    {Incremento 4 selezione data app} & {} & {}& {}& {}\\
-    {Incremento 5 selezione orario app} & {} & {}& {}& {}\\
-    {Incremento 6 creazione \glo{dashboard} admin} & {} & {}& {}& {}\\
+    {Incremento 3 login web} & {R-1-F-O} & {}& {}& {}\\
+    {Incremento 3 logout web} & {R-2-F-O} & {}& {}& {}\\
+    {Incremento 3 registrazione stanza dalla} & {R-8-F-O} & {}& {}& {}\\
+    {Incremento 3 aggiunta utente dal web} & {R-4-F-O} & {}& {}& {}\\
+    {Incremento 3 login app} & {R-23-F-O} & {}& {}& {}\\
+    {Incremento 4 selezione data app} & {R-27.3-F-O} & {}& {}& {}\\
+    {Incremento 5 selezione orario app} & {R-27.4-F-O} & {}& {}& {}\\
     
     
 
