--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -1,9 +1,8 @@
 \subsection{Consuntivo fase di progettazione}
-Il bilancio della fase di progettazione è positivo,il gruppo ha impiegato meno ore di quelle preventivate inzialmente,ma sono stati riscontrati diversi problemi.\\
-È stato cruciale fare un analisi critica della fase precedente e dei rischi che ne possono derivare,sono stati riscontrati rischi che hanno influito nella ripianificazione della fase di progettazione.
-Il team ha concordato ad unanimità di ruotare i ruoli in modo solo parziale e lasciare la progettazione architetturale e lo sviluppo relativo al PoC a membri con un'esperienza
-maggiore nelle relative tecnologie conivolte.
-Per la lista dei rischi riscontrati si rimanda alla appendice dove si trova alla \hyperlink{Tabellaoccorrenzarischi}{tabella dell'occorrenza dei rischi} in appendice.
+Il bilancio della fase di progettazione è positivo. Il gruppo ha impiegato meno ore di quelle preventivate inzialmente ma sono stati riscontrati diversi problemi.\\
+È stato cruciale fare un'analisi critica della fase precedente e dei rischi che ne possono derivare: sono stati riscontrati rischi che hanno influito nella ripianificazione della fase di progettazione.
+Il team ha concordato ad unanimità di ruotare i ruoli in modo solo parziale e lasciare la progettazione architetturale e lo sviluppo relativo al \glo{PoC} a membri con un'esperienza maggiore nelle relative tecnologie conivolte.
+Per l'analisi dei rischi riscontrati si rimanda alla \hyperlink{Tabellaoccorrenzarischi}{tabella dell'occorrenza dei rischi} in appendice.
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
@@ -40,11 +39,11 @@ Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti
 \begin{itemize}
 	\item \textbf{Responsabile}: {essendo il team abbastanza coeso la maggior parte del tempo è stata dedicato al PdP;}
 	\item \textbf{Amministratore}: {la collaborazione tra membri del team in questo ruolo è risultata soddisfaciente;}
-	\item \textbf{Analista}: {Dopo l'aggiudicazione del capitolato il team si è reso conto che la documentazione presente nell'AdR presentava diverse lacune, ciò ha portato a un incremento orario per tale ruolo;}
-	\item \textbf{Progettista}: {Grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie a progettare il PoC, ammortizzando il costo orario dell'analista;}
-	\item \textbf{Programmatore}: {Grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie allo sviluppo del PoC, ammortizzando il costo orario dell'analista;}
-	\item \textbf{Verificatore}: {Avendo più esperienza con le tecnologie richieste(alla documentazione in particolare), il numero di ore è inferiore a quelle preventivate.}
+	\item \textbf{Analista}: {dopo l'aggiudicazione del capitolato il team si è reso conto che la documentazione presente nell'AdR presentava diverse lacune, ciò ha portato a un incremento orario per tale ruolo;}
+	\item \textbf{Progettista}: {grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie a progettare il PoC, ammortizzando il costo orario dell'analista;}
+	\item \textbf{Programmatore}: {grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie allo sviluppo del PoC, ammortizzando il costo orario dell'analista;}
+	\item \textbf{Verificatore}: {avendo più esperienza con le tecnologie richieste(alla documentazione in particolare), il numero di ore è inferiore a quelle preventivate.}
 \end{itemize}
 \subsubsection{Ragionamento sugli scostamenti futuri}
-L'esperienza e la coesione maturata saranno cruciale nel cercare di mitigare il numero di ore richieste,visti i scostamenti orari in particolare dell'analista rispetto al preventivo iniziale, che hanno portato ad una riduzione oraria complessiva di ciascun membro.
-Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali rischi(come quelli riscontrati in tale fase) o investirli nell'implementazione di requisiti desiderabili o facoltativi.
+L'esperienza e la coesione maturata saranno cruciali nel cercare di mitigare il numero di ore richieste, visti gli scostamenti orari (in particolare dell'analista) rispetto al preventivo iniziale, che hanno portato ad una riduzione oraria complessiva di ciascun membro.
+Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali rischi (come quelli riscontrati in tale fase) o investirli nell'implementazione di requisiti desiderabili o facoltativi.
