--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -54,6 +54,7 @@
     \newpage
     \section{Organigramma}\label{sec:Organigramma}
     \input{src/Organigramma/main.tex}
+    \newpage
     \setcounter{secnumdepth}{0}
     \section{Appendice}\label{sec:Appendice}
     \appendix
