--- a/DocumentiEsterni/PianoDiProgetto/src/Appendice/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Appendice/main.tex
@@ -2,6 +2,7 @@
 \subsection{Occorenze rischi}
 \input{src/AnalisiRischi/src/OccorrenzaRischi.tex}
 \vspace{30pt}
+\newpage
 \subsection{Appendice Incrementi}
 \input{src/Appendice/src/incrementi.tex}
 
