--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -2,7 +2,24 @@
 Il bilancio della fase di progettazione è positivo. Il gruppo ha impiegato meno ore di quelle preventivate inzialmente ma sono stati riscontrati diversi problemi.\\
 È stato cruciale fare un'analisi critica della fase precedente e dei rischi che ne possono derivare: sono stati riscontrati rischi che hanno influito nella ripianificazione della fase di progettazione.
 Il team ha concordato ad unanimità di ruotare i ruoli in modo solo parziale e lasciare la progettazione architetturale e lo sviluppo relativo al \glo{PoC} a membri con un'esperienza maggiore nelle relative tecnologie conivolte.
-Per l'analisi dei rischi riscontrati si rimanda alla \hyperlink{Tabellaoccorrenzarischi}{tabella dell'occorrenza dei rischi} in appendice.
+Per l'analisi dei rischi riscontrati si rimanda alla \hypersetup{
+    linkcolor=blue
+} \hyperlink{Tabellaoccorrenzarischi}{tabella dell'occorrenza dei rischi} 
+\hypersetup{
+    linkcolor=black
+}
+in appendice.
+Gli incrementi sviluppati in tale fase sono:\\
+\begin{itemize}
+	\item l'incremento 0. 
+\end{itemize}
+Il costo di tale incremento essendo unico è essenzialmente il costo orario del progettista e del programmatore, più qualche ora di test d'integrita manuale, maggiori dettagli relativi a questo incremento(0) si trovano in appendice, nella 
+\hypersetup{
+    linkcolor=blue
+}
+\hyperlink{TabellaIncrementi}{tabella degli incrementi}.\hypersetup{
+    linkcolor=black
+}
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
