--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoProgettazione.tex
@@ -34,7 +34,8 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 	\caption{Istogramma relativo alle ore preventivate per ciascun componente nella fase di progettazione}
     \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoProj.png}  
 \end{figure}
-
+\subsubsection{Preventivo incrementi}
+Il preventivo orario parziale degli incrementi non è stato fatto, visto che quello individuato nella \hyperlink{TabellaIncrementi}{tabella degli incrementi} è unico.
 
 \clearpage
 \subsubsection{Costo risultante}
