--- a/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
@@ -3,16 +3,8 @@
 \begin{longtable}{ C{0.15\textwidth} C{0.15\textwidth} C{0.15\textwidth} C{0.15\textwidth} C{0.15\textwidth} }
     \caption{Tabella Incrementi}                                                                                 \\
     \rowcolor{\primaryColor}
-    \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito backend}}  &\textcolor{\secondaryColor}{\textbf{requisiti webapp admin}}&\textcolor{\secondaryColor}{\textbf{requisito app utenti}}&\textcolor{\secondaryColor}{\textbf{costo tot. in euro}}\\ \endhead
-    {Incremento 1 integrazione blockchain} & {R-numero-D-I } & {10 } & {10}&  {520}\\
-    {Incremento 2 app Android lettura \glo{NFC}} & {} & {}& {}& {}\\
-    {Incremento 3 login web} & {R-1-F-O} & {}& {}& {}\\
-    {Incremento 3 logout web} & {R-2-F-O} & {}& {}& {}\\
-    {Incremento 3 registrazione stanza dalla} & {R-8-F-O} & {}& {}& {}\\
-    {Incremento 3 aggiunta utente dal web} & {R-4-F-O} & {}& {}& {}\\
-    {Incremento 3 login app} & {R-23-F-O} & {}& {}& {}\\
-    {Incremento 4 selezione data app} & {R-27.3-F-O} & {}& {}& {}\\
-    {Incremento 5 selezione orario app} & {R-27.4-F-O} & {}& {}& {}\\
+    \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito backend}}  &\textcolor{\secondaryColor}{\textbf{requisiti webapp admin}}&\textcolor{\secondaryColor}{\textbf{requisito app utenti}}&\textcolor{\secondaryColor}{\textbf{costo totale in euro}}\\ \endhead
+    {Incremento 0 \glo{Proof of Concept}(app mobile utente e web-app admin), prenotazione postazioni,tracciamento(\glo{NFC},\glo{blockchain}),gestione stanze(a livello dimostrativo per il PoC)} & {R-1-F-O, R-1.1-F-O,R-2-V-O, R-8-F-O, R-4-F-O} & {R-1-V-O, R-2-V-O, R-6-V-O,R-7-V-O, R-23-F-O, R-24-F-O, R-27.3-F-O, R-27.4-F-O, R-32-F-O} & {R-4-V-O, R-9-V-O, R-10-V-O}&  {1570}\\
     
     
 
