Aggiunto grafici preventivo a finire(consuntivo progettazione)

--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -38,10 +38,10 @@ La seguente tabella illustra la differenza oraria ed economica rilevata a poster
 Responsabile    &  19 & 0 & 630 & 570 &  0 \\
 Amministratore  &  20 & 0 & 400 & 400 & 0 \\
 Analista        & 24 & +16 & 600 & 1000 & +400 \\
-Progettista     &  49 & 9 & 1078 & 880 & -198 \\
+Progettista     &  49 & -9 & 1078 & 880 & -198 \\
 Programmatore   &   58 & -12 & 870 &  690 & -180 \\
 Verificatore    &  59 &  -10 & 885 & 735 & -150 \\
-\textbf{Totale} & 231 & 20 & 4463 & 4335 & -128 \\	
+\textbf{Totale} & 231 & 15 & 4463 & 4335 & -128 \\	
 \end{longtable}
 }
 
@@ -64,3 +64,39 @@ Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti
 \subsubsection{Ragionamento sugli scostamenti futuri}
 L'esperienza e la coesione maturata saranno cruciali nel cercare di mitigare il numero di ore richieste, visti gli scostamenti orari (in particolare dell'analista) rispetto al preventivo iniziale, che hanno portato ad una riduzione oraria complessiva di ciascun membro.
 Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali rischi (come quelli riscontrati in tale fase) o investirli nell'implementazione di requisiti desiderabili o facoltativi.
+
+
+
+La seguente tabella rappresenta la ridistribuzione oraria dei ruoli per ogni componente del gruppo:
+\rowcolors{2}{\evenRowColor}{\oddRowColor}
+\renewcommand{\arraystretch}{2}
+\begin{longtable}[h!] { C{3.5cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{2cm}}
+\caption{Rististribuzione oraria preventivo a finire}\\
+\rowcolor{\primaryColor}
+
+\textcolor{\secondaryColor}{\textbf{Membro del gruppo}} & 
+\textcolor{\secondaryColor}{\textbf{RE}} & 
+\textcolor{\secondaryColor}{\textbf{AM}} & 
+\textcolor{\secondaryColor}{\textbf{AN}} & 
+\textcolor{\secondaryColor}{\textbf{PT}} & 
+\textcolor{\secondaryColor}{\textbf{PR}} & 
+\textcolor{\secondaryColor}{\textbf{VE}} & 
+\textcolor{\secondaryColor}{\textbf{Ore complessive}}\\	
+\endhead
+        
+\AW{}                     & -  & 5 & 10 & 30 & 25 & 32 & 102 \\
+\AT{}                     & 11 & 10 & 15& 15 & 22 & 28 & 101\\
+\AD{}                     & 10 & 10 & 0 & 12 & 38 & 32 & 102 \\
+\EC{}                     & 11 & 10 & 11& 13 & 23 & 32 & 100 \\
+\EM{}                     & 10 & 8 & 0 & 17 & 38 & 30 & 103 \\
+\FP{}                     & 10 & 8 & 0 & 23 & 34 & 27 & 102 \\
+\GG{}                     & -  & 8 & 9 & 23 & 35 & 27 & 102 \\
+\textbf{Ore totali ruolo(variazione)} & 52 & 59 & 45(+16) & 133(-9) & 215(-12) & 208(-10) & 712(-15) \\
+
+		
+\end{longtable}
+\begin{figure}[h!]
+	\caption{Istogramma di ridistribuzione oraria del preventivo a finire}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoPreventivoaFinireProj.png}  
+\end{figure} 
+
