--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/Informazioni/src/InformazioniIncontro/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/Informazioni/src/InformazioniIncontro/main.tex
@@ -1,19 +1,19 @@
 \begin{itemize}
-    \item \textbf{Luogo}: Videochiamata tramite Discord;
-    \item \textbf{Data}: 2021-03-06;
-    \item \textbf{Ora di inizio}: 9.00;
-    \item \textbf{Ora di fine}: 11:35;
+    \item \textbf{Luogo}: Videochiamata tramite Discord
+    \item \textbf{Data}: 2021-03-06
+    \item \textbf{Ora di inizio}: 9:00
+    \item \textbf{Ora di fine}: 11:35
     \item \textbf{Presenze}:
           \begin{itemize}
-            \item Abdelwahad Kandoul;
-            \item Alessio Trevisan;
-            \item Giovanni Grigoletto;
-            \item Elvis Murtezan;
-            \item Andrea De Tomasi;
-            \item Filippo Pinton.
+            \item Abdelwahad Kandoul
+            \item Alessio Trevisan
+            \item Giovanni Grigoletto
+            \item Elvis Murtezan
+            \item Andrea De Tomasi
+            \item Filippo Pinton
           \end{itemize}
     \item \textbf{Assenze}:
           \begin{itemize}
-            \item Edoardo Caregnato;
+            \item Edoardo Caregnato
           \end{itemize}
 \end{itemize}
