--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/Informazioni/src/InformazioniIncontro/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/Informazioni/src/InformazioniIncontro/main.tex
@@ -1,16 +1,16 @@
 \begin{itemize}
-    \item \textbf{Luogo}: Videochiamata tramite Discord;
-    \item \textbf{Data}: 2021-01-10;
-    \item \textbf{Ora di inizio}: 16:00;
-    \item \textbf{Ora di fine}: 18:10;
+    \item \textbf{Luogo}: Videochiamata tramite Discord
+    \item \textbf{Data}: 2021-01-10
+    \item \textbf{Ora di inizio}: 16:00
+    \item \textbf{Ora di fine}: 18:10
     \item \textbf{Presenze}:
           \begin{itemize}
-            \item Abdelwahad Kandoul;
-            \item Alessio Trevisan;
-            \item Edoardo Caregnato;
-            \item Giovanni Grigoletto;
-            \item Elvis Murtezan;
-            \item Andrea De Tomasi;
-            \item Filippo Pinton.
+            \item Abdelwahad Kandoul
+            \item Alessio Trevisan
+            \item Edoardo Caregnato
+            \item Giovanni Grigoletto
+            \item Elvis Murtezan
+            \item Andrea De Tomasi
+            \item Filippo Pinton
           \end{itemize}
 \end{itemize}
