--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
@@ -6,8 +6,8 @@ Gli aspetti su cui ci si è maggiormente concentrati sono descritti nei punti se
         \item \textbf{RTx}: rischio tecnologico, riguarda i problemi prettamente tecnici che possono subentrare;
         \item \textbf{RPx}: rischio personale, relativo a questioni private esterne che possono riguardare uno o più membri del gruppo;
         \item \textbf{ROx}: rischio organizzativo, comprendente problemi di tempistiche o eventuali disguidi all'interno del gruppo;
-        \item \textbf{RRx}: rischio dei requisiti, comprende problemi legati ai requisiti individuati nel AdR;
-        \item \textbf{RSx}: rischio di stima.
+        \item \textbf{RRx}: rischio di requisiti, comprende problemi legati ai requisiti individuati nell'\AdR{};
+        \item \textbf{RSx}: rischio di stima, relativo a problemi sul calcolo costo/orario.
     \end{itemize}
     Dove il carattere \textbf{x} indica per ogni tipologia una lettera minuscola assegnata, in ordine alfabetico crescente, con lo scopo di dare un'identificazione univoca al rischio corrispondente.
     
