--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Riferimenti.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Riferimenti.tex
@@ -6,9 +6,13 @@
 
 \subsubsection{Informativi}
 \begin{itemize}
-    \item \textbf{Capitolato d'appalto C1}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf};
-    \item \textbf{Docker Ecosystem and Tools}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/ST3.pdf};
-    \item \textbf{Gestione di progetto}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L06.pdf};
-    \item \textbf{Libro ingegneria del sofware(software engineering-Ian Sommerville)}: \url{capitolo relativo allo sviluppo incrementale};
-    \item \textbf{Modello di Sviluppo icrementale}: \url{http://tryqa.com/what-is-incremental-model-advantages-disadvantages-and-when-to-use-it/};
+    \item \textbf{Capitolato d'appalto C1}:\\
+     \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf};
+    \item \textbf{Docker Ecosystem and Tools}: \\
+    \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/ST3.pdf};
+    \item \textbf{Gestione di progetto}:\\
+    \url{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L06.pdf};
+    \item \textbf{Testo di ingegneria del sofware}: Ian Sommerville, Software Engineering (parte 4);
+    \item \textbf{Modello di Sviluppo icrementale}: \\
+    \url{http://tryqa.com what-is-incremental-model-advantages-disadvantages-and-when-to-use-it/};
 \end{itemize}
