--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/SceltaModello.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/SceltaModello.tex
@@ -2,15 +2,12 @@ Il gruppo \Gruppo{} punta a sviluppare un piano di lavoro che sia conforme al mo
 
 \subsection{Descrizione}
 La scelta di un modello di sviluppo porta dei vincoli sulla pianificazione e sulla gestione del progetto.
-L’obiettivo del gruppo è di abbinare qualità al modello scelto, in modo da ottenere conformità con
-gli obiettivi del modello nel progetto e maturità nei processi.
-Il gruppo vorrebbe raggiungere un modello di sviluppo di tipo incrementale per il \glo{ciclo di vita} del software per i seguenti
-motivi:
+Il gruppo vorrebbe raggiungere un modello di sviluppo di tipo incrementale per il \glo{ciclo di vita} del software per i seguenti motivi:
 \begin{itemize}
-    \item Può produrre valore ad ogni incremento, aiutando a fissare meglio i requisiti per gli incrementi
+    \item può produrre valore ad ogni incremento, aiutando a fissare meglio i requisiti per gli incrementi
     successivi;
-    \item Ogni incremento riduce il rischio di fallimento;
-    \item Le funzionalità principali e/o critiche sono sviluppate nei primi incrementi che diventano via via più stabili.
+    \item ogni incremento riduce il rischio di fallimento;
+    \item le funzionalità principali e/o critiche sono sviluppate nei primi incrementi che diventano via via più stabili.
 \end{itemize}
 
 
@@ -19,18 +16,17 @@ motivi:
 
 Nel modello incrementale i requisiti vengono classificati in base alla loro importanza strategica. In
 questo modo quelli più importanti vengono trattati prima. Questo ne aumenta la chiarezza e la
-facilità di soddisfazione. I requisiti meno importanti invece vengono soddisfatti dopo quelli più
-importanti venendo cosi inseriti in un sistema già stabilizzato.
+facilità di soddisfazione. I requisiti meno importanti invece vengono soddisfatti dopo quelli principali, venendo cosi inseriti in un sistema già stabilizzato.
 Il metodo di lavoro sarà quindi questo:
 \begin{itemize}
-    \item In ogni fase di lavoro vengono prefissati degli incrementi che devono essere prodotti entro una data di
+    \item in ogni fase di lavoro vengono prefissati degli incrementi che devono essere prodotti entro una data di
     scadenza decisa dal gruppo;
-    \item Il lavoro viene diviso tra i membri del gruppo;
-    \item Al termine del periodo prefissato i membri del gruppo si riuniranno per analizzare il lavoro svolto da ogni
+    \item il lavoro viene diviso tra i membri del gruppo;
+    \item al termine del periodo prefissato i membri del gruppo si riuniranno per analizzare il lavoro svolto da ogni
     componente, segnalando eventuali problemi o difficoltà;
-    \item Sarà compito dei verificatori controllare il lavoro svolto dagli altri membri del gruppo e sollevare
+    \item sarà compito dei verificatori controllare il lavoro svolto dagli altri membri del gruppo e sollevare
     eventuali incongruenze o errori;
-    \item Alla fine di questa \glo{verifica} seguirà una nuova discussione di gruppo per stabilire se gli obiettivi
+    \item alla fine di questa \glo{verifica} seguirà una nuova discussione di gruppo per stabilire se gli obiettivi
     dell’incremento sono stati soddisfatti.
 \end{itemize}
 
