--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoProgettazione.tex
@@ -31,13 +31,13 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \end{longtable}
 
 \begin{figure}[h!]
+    \centering
 	\caption{Istogramma relativo alle ore preventivate per ciascun componente nella fase di progettazione}
-    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoProj.png}  
+    \includegraphics[scale=0.60]{./src/Preventivo/src/img/IstoProj.png}  
 \end{figure}
 \subsubsection{Preventivo incrementi}
 Il preventivo orario parziale degli incrementi non è stato fatto, visto che quello individuato nella \hyperlink{TabellaIncrementi}{tabella degli incrementi} è unico.
 
-\clearpage
 \subsubsection{Costo risultante}
 La seguente tabella rappresenta per ogni ruolo le ore totali preventivate ed il corrispondente costo in euro:
 {
@@ -64,19 +64,7 @@ Verificatore    &  59 &  885 \\
 }
 
 \begin{figure}[h!]
+    \centering
 	\caption{Areogramma relativo alla quantità di ore totali preventivate per ciascun ruolo nella fase di progettazione}
-    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaProj.png}  
+    \includegraphics[scale=0.50]{./src/Preventivo/src/img/TortaProj.png}  
 \end{figure}
-
-%\begin{center}
-%	\begin{tikzpicture}
-%		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
-%			9/Responsabile,
-%			9/Amministratore,
-%			10/Analista,
-%			21/Progettista,
-%			25/Programmatore,
-%			26/Verificatore
-%		}
-%	\end{tikzpicture}
-%\end{center}
