--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
@@ -34,14 +34,14 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         Una volta che si ha chiaro cosa sia necessario, informare tempestivamente il gruppo dell'eventuale mancanza. &
         Munirsi al più presto del necessario. Qualora non fosse possibile altri membri del gruppo prenderanno in carico le relative mansioni, affidando all'interessato quelle che non hanno necessità dell'elemento in questione. \\
         \hline
-        RTd &
+        RRa &
         Mancata comprensione di alcuni \glo{requisiti} richiesti dal progetto. &
         media &
         alta &
         Comunicare quanto prima al gruppo qualunque cosa non sia stata ben capita dalla persona in questione. &
         Gli altri membri che hanno chiara la questione si impegnano a spiegare ed aiutare nella comprensione. Se necessario si provvederà a contattare il proponente. \\
         \hline
-        RTe &
+        RTd &
         Tempo a disposizione scarso per lo svolgimento di alcuni compiti onerosi. &
         alta &
         alta &
@@ -108,28 +108,13 @@ del progetto. \\
         All'avvicinarsi dello scadere dei tempi stabiliti, il responsabile si informerà sullo stato dei lavori. &
         Nei casi più urgenti i restanti membri del gruppo valuteranno se suddividersi il lavoro da svolgere. \\
         \hline
-        RRa &
-        Incomprensione dei requisiti richiesti,
-        può accadere all’inizio
-        del progetto
-        con poche conseguenze,
-        ma se accade
-        a progetto inoltrato
-        il problema
-        può rivelarsi molto
-        serio &
-        media &
-        alta &
-        Deve essere rilevato prima di procedere alla fase di progettazione in modo da avere chiaro i requisiti facendo un analisi critica di tale fase. &
-        Da prevenire possibilmente facendo un analisi critica della fase di analisi ed apportare eventuali modifiche.  \\
-       \hline
         RRb &
-        Cliente poco presente
+        Il cliente è poco presente.
         Rischio che prevede
         contatti poco frequenti
         e/o di scarso
         aiuto con l’azienda
-        proponente che mostra
+        proponente, la quale mostra
         poco interesse &
         bassa &
         alta &
@@ -137,38 +122,38 @@ del progetto. \\
         le disponibilità
         dell’azienda &
         Cercare di insistere mandando e-mail per quanto possibile
-e qualora questo non portasse a risultati capire al meglio i requisiti per conto proprio\\
+e qualora questo non portasse a risultati capire al meglio i requisiti per conto proprio.\\
         \hline
         RRc &
-        Modifica dei requisiti
-Si verifica quando
-nel corso del
-progetto l’azienda
-proponente modifica
-qualche richiesta
-iniziale oppure se
-il gruppo sceglie
-di sviluppare il
-progetto in maniera
-diversa da quella
-già pensata &
+        Modifica dei requisiti.
+        Si verifica quando
+        nel corso del
+        progetto l’azienda
+        proponente modifica
+        qualche richiesta
+        iniziale oppure se
+        il gruppo sceglie
+        di sviluppare il
+        progetto in maniera
+        diversa da quella
+        già pensata. &
         bassa &
         alta &
         Sarà l’azienda a comunicare
-al gruppo
-il cambiamento dei
-requisiti &
-Effettuare nuovamente
-l’analisi dei
-requisiti \\
-\hline
-RSa &
-Per ogni incremento verrà stimato il costo di tempo, denaro e risorse utilizzate. A causa dell’inesperienza questa stima potrebbe essere errata &
-alta &
-media &
-Se un membro del gruppo si accorge/pensa di non attenersi alla pianificazione e quindi termina prima o dopo del tempo prestabilito o utilizza risorse e denaro non come previsto,dovrà farlo presente al responsabile di progetto(legato a ROc) &
-Organizzare un’attenta pianificazione in modo da ridurre questo rischio e qualora si presentasse un eccesso troppo alto il responsabile dovrà
-ridistribure:le risorse,il carico di lavoro per ammortizzare i tempi e/o costi e svolgere quanto prefissato e come nel periodo di tempo specifico  \\
+        al gruppo
+        il cambiamento dei
+        requisiti. &
+        Effettuare nuovamente
+        l’analisi dei
+        requisiti. \\
+        \hline
+        RSa &
+        Per ogni incremento verrà stimato il costo di tempo, denaro e risorse utilizzate. A causa dell’inesperienza dei membri del gruppo, questa stima potrebbe essere errata. &
+        alta &
+        media &
+        Se un membro del gruppo si accorge/pensa di non attenersi alla pianificazione e quindi termina prima o dopo del tempo prestabilito, oppure utilizza risorse e denaro non come previsto, dovrà farlo presente al responsabile di progetto (legato a ROc). &
+        Organizzare un’attenta pianificazione in modo da ridurre questo rischio. Qualora si presentasse uno scostamento troppo alto, il responsabile dovrà
+        ridistribure le risorse, il carico di lavoro per ammortizzare i tempi/costi e svolgere quanto prefissato.  \\
 
         \end{longtable}
     }
