--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Scadenze.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Scadenze.tex
@@ -2,6 +2,6 @@ Il gruppo \Gruppo{} intende realizzare il progetto \NomeProgetto{} rispettando l
 \begin{itemize}
     \item \textbf{Revisione dei Requisiti}: 11 gennaio 2021;
     \item \textbf{Revisione di Progettazione}: 10 marzo 2021;
-    \item \textbf{Revisione di Qualifica}: desiderabile 2 aprile 2021;altrimenti concordare una data in 2 aprile col committente.
-    \item \textbf{Revisione di Accettazione}: 3 maggio 2021.
+    \item \textbf{Revisione di Qualifica}: 2 aprile 2021; (desiderabile, altrimenti verrà concordata una data postuma con il committente);
+    \item \textbf{Revisione di Accettazione}: 3 maggio 2021 (desiderabile, altrimenti verrà concordata una data postuma con il committente).
 \end{itemize}
