--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/StrutturaDocumento.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/StrutturaDocumento.tex
@@ -5,5 +5,6 @@ Nello specifico, gli aspetti sopracitati verranno suddivisi e trattati in rispet
         \item Modello di sviluppo;
         \item Pianificazione;
         \item Preventivo;
-        \item Organigramma del gruppo.
+        \item Organigramma del gruppo;
+        \item Appendice.
     \end{itemize}
