--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
@@ -31,73 +31,13 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 	\end{longtable}
 }
 
-% Responsabile color=blue, Amministratore color=yellow, Analista color=red, Progettista color=green, Programmatore color=grigetto, Verificatore color=orange  [ybar, fill=] blue, yellow, red, green, grigetto, orange
 
 \begin{figure}[h!]
+	\centering
 	\caption{Istogramma relativo alla suddivisione delle ore preventivate per ciascun componente del gruppo e per ogni ruolo nella fase di sviluppo}
-    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoSviluppo.png}  
+    \includegraphics[scale=0.50]{./src/Preventivo/src/img/IstoSviluppo.png}  
 \end{figure}
 
-%\begin{center}
-%	\pgfplotsset{width=15.4cm, height=8.5cm}
-%	\begin{tikzpicture}
-%		\begin{axis}[
-%			ybar stacked,
-%			bar width=20pt,
-%			legend style={
-%				at={(0.5,-0.15)},
-%				anchor=north,
-%				legend columns=-1
-%			},
-%			symbolic x coords={Abdelwahad, Alessio, Andrea, Edoardo, Elvis, Filippo, Giovanni},
-%			xtick=data
-%		]
-%			\legend{Responsabile, Amministratore, Analista, Progettista, Programmatore, Verificatore}
-			% Responsabile
-%			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{0}{11}{10}{0}{0}{0}{0}};
-			% Amministratore
-%			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{8}{8}{8}};
-			% Analista
-%			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{0}{0}{0}};
-			% Progettista
-%			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{12}{10}{7}{13}{10}{11}{10}};
-			% Programmatore
-%			\addplot [ybar, fill=pink] coordinates {\ColonnaIstogramma{19}{15}{18}{18}{19}{18}{19}};
-			% Verificatore
-%			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{17}{13}{14}{17}{11}{12}{12}};
-%		\end{axis}
-%	\end{tikzpicture}
-%\end{center}
-\clearpage
-% \subsubsection{Ore e costi degli incrementi}
-% La seguente tabella rappresenta la distribuzione delle ore investite durante il periodo in cui vengono svolti gli incrementi e il corrispondente costo in euro.
-
-
-% {
-% \rowcolors{2}{\evenRowColor}{\oddRowColor}
-% \renewcommand{\arraystretch}{1.65}
-% \centering
-% \begin{longtable}{ C{2.1cm} C{2.7cm} C{3cm} C{3cm} C{3.3cm} }
-% \caption{Tabella del costo risultante di ogni incremento}\\
-% \rowcolor{\primaryColor}
-% \textcolor{\secondaryColor}{\textbf{Incremento}} & 
-% \textcolor{\secondaryColor}{\textbf{Ore progettista}} &
-% \textcolor{\secondaryColor}{\textbf{Ore programmatore}}&
-% \textcolor{\secondaryColor}{\textbf{Ore verificatore}}&
-% \textcolor{\secondaryColor}{\textbf{Costo totale incremento (in \euro{})}}\\
-% \endhead
-
-
-% x & x & x & x & x\\
-% x & x & x & x & x\\
-% x & x & x & x & x\\
-% x & x & x & x & x\\
-% x & x & x & x & x\\
-
-
-
-% \end{longtable}
-% }
 
 
 \subsubsection{Costo risultante}
@@ -125,21 +65,8 @@ Verificatore    & 96 & 1440 \\
 \end{longtable}
 }
 
-
-
 \begin{figure}[h!]
+	\centering
 	\caption{Areogramma relativo alla quantità di ore totali preventivate per ciascun ruolo nella fase di sviluppo}
-    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaSviluppo.png}  
+    \includegraphics[scale=0.60]{./src/Preventivo/src/img/TortaSviluppo.png}  
 \end{figure}
-
-%\begin{center}
-%	\begin{tikzpicture}
-%		\pie[rotate = 180, color={blue, yellow, green, pink, orange}] {
-%			6/Responsabile,
-%			7/Amministratore,
-%			22/Progettista,
-%			37/Programmatore,
-%			28/Verificatore
-%		}
-%	\end{tikzpicture}
-%\end{center}
