--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
@@ -55,37 +55,14 @@ Verificatore   &  218 & 3270 \\
 \end{longtable}
 }
 
-% La quantità di ore totali per ciascun ruolo (rendicontate e non) viene rappresentata nel seguente areogramma:
-% \begin{center}
-% 	\begin{tikzpicture}
-% 		\pie[rotate = 180, color={blue, yellow, red, green, grigetto, orange}] {
-% 			7/Responsabile, % 75/1056 circa 7%
-% 			10/Amministratore, % 107/1056 circa 10%
-% 			14/Analista, % 152/1056 circa 14%
-% 			17/Progettista, % 181/1056 circa 17%
-% 			22/Programmatore, % 227/1056 circa 22%
-% 			30/Verificatore % 314/1056 circa 30%
-% 		}
-% 	\end{tikzpicture}
-% \end{center}
 
 
 \begin{figure}[h!]
+	\centering
 	\caption{Areogramma relativo la distribuzione dei costi in percentuale alla spesa totale da affrontare}
-    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaPrevCompleto.png}  
+    \includegraphics[scale=0.60]{./src/Preventivo/src/img/TortaPrevCompleto.png}  
 \end{figure}
-%\begin{center}
-%	\begin{tikzpicture}
-%		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
-%			7/Responsabile, % 52/723 %
-%			8/Amministratore, % 59/723 %
-%			4/Analista, % 29/723 %
-%			20/Progettista, % 142/723 %
-%			31/Programmatore, % 227/723 %
-%			30/Verificatore % 218/723 %
-%		}
-%	\end{tikzpicture}
-%\end{center}
+
 
 \subsubsection{Costo complessivo}
 Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e infine l'importo proposto dal gruppo \Gruppo{} per la realizzazione del progetto \NomeProgetto{}:\\
