--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -71,18 +71,18 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         progettazione &
         1 & 
         bassa &
-        la maggior parte del team ha segnalato subito all'inizio di tale fase che ci sarebbere stato tale rischio ed ha pianificato di conseguenza. \\
+        La maggior parte del team ha segnalato subito all'inizio di tale fase che ci sarebbere stato tale rischio ed ha pianificato di conseguenza. \\
         \hline
         RRa &
         progettazione &
         1 & 
         bassa & 
-        è stato chiaro fin da subito alla maggior parte del team che doveva essere fatta un analisi più approfondita,ciò ha influito in una ripianificazione oraria e ricollocazione delle risorse.\\
+         Fin da subito è stato chiaro alla maggior parte del team che doveva essere fatta un analisi più approfondita e ciò ha influito in una ripianificazione oraria e ricollocazione delle risorse.\\
         \hline
         RTa &
         progettazione &
         1,2,3 & 
         alta &
-        gli impegni personali(ROc) ed al contempo imparare le tecnologie rischieste ha portato ad un alto stress nel gruppo, non ha influito grazie alla ripianificazione della fase relativa. \\
+        Gli impegni personali (ROc) ed al contempo l'apprendimento delle tecnologie richieste ha portato un certo livello di stress nel gruppo. La ripianificazione della fase relativa, ha fortemente mitigato tale problema. \\
     \end{longtable}
 }
