--- a/DocumentiInterni/Verbali/Verbale_2021-02-10/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_2021-02-10/src/DettaglioRiunione/main.tex
@@ -4,7 +4,7 @@ al preventivo del piano di progetto e ad alcune imprecisioni nelle norme di prog
 realizzare durante la fase:
 
 \begin{itemize}
-	\item verifica del corretto funzionamento dei tag RFID e del loro adattamento allo scopo preposto;
+	\item verifica del corretto funzionamento dei tag \glo{RFID} e del loro adattamento allo scopo preposto;
 	\item revisione dei casi d'uso; 
 	\item revisione dei diagrammi dei casi d'uso;
 	\item revisione dei requisiti dell'analisi dei requisiti;
