--- a/DocumentiInterni/Verbali/Verbale_2021-02-10/src/Informazioni/src/OrdineDelGiorno/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_2021-02-10/src/Informazioni/src/OrdineDelGiorno/main.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
 	\item analisi delle correzioni relative alla RR;
-	\item pianificazione del lavoro associato alla realizzazione del POC;
-	\item scelta e motivazione degli strumenti software per la technology baseline;
+	\item pianificazione del lavoro associato alla realizzazione del \glo{POC};
+	\item scelta e motivazione degli strumenti software per la \glo{technology baseline}.
 \end{itemize}
