--- a/DocumentiInterni/Verbali/Verbale_2021-02-10/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_2021-02-10/src/Comandi.tex
@@ -1,8 +1,8 @@
 \newcommand{\Titolo}{Verbale interno del 2021-02-10}
 
-\newcommand{\Approvatore}{Abdelwahad Kandoul}
+\newcommand{\Approvatore}{Edoardo Caregnato}
 \newcommand{\Redattori}{Alessio Trevisan}
-\newcommand{\Verificatori}{Edoardo Caregnato}
+\newcommand{\Verificatori}{Abdelwahad Kandoul}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
