--- a/DocumentiInterni/Verbali/Verbale_2021-02-10/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/Verbale_2021-02-10/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-02-26                                       & Responsabile                                & Abdelwahad Kandoul & \responsabile{} \\
-        0.1.0                  & 2021-02-16                                       & Verifica                                    & Edoardo Caregnato & \verificatore{} \\
-        0.0.1                  & 2021-02-11                                       & Stesura                          & Alessio Trevisan & \redattore{}    \\
+        1.0.0                  & 2021-02-26                                       & Approvazione                                & Edoardo Caregnato & \responsabile{} \\
+        0.1.0                  & 2021-02-16                                       & Verifica                                    & Abdelwahad Kandoul & \verificatore{} \\
+        0.0.1                  & 2021-02-11                                       & Stesura verbale                         & Alessio Trevisan & \redattore{}    \\
     \end{longtable}
 }
