--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -59,13 +59,13 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         progettazione &
         1,2 & 
         alta &
-        i membri del team sono stati impegnati in altri progetti personali, che hanno portato a una ripianificazione ed a concordare una nuova data col committente a cui presentare l'andamento dei lavori.\\
+        I membri del team sono stati impegnati in altri progetti personali, che hanno portato a una ripianificazione ed a concordare una nuova data col committente a cui presentare l'andamento dei lavori.\\
         \hline
         ROc &
         progettazione &
         1 & 
         bassa &
-        sono state fatte sia sovrastime che sottostime ma si è ripianificato in tempo per ammortizzare il carico di lavoro medio\\
+        Sono state fatte sia sovrastime che sottostime ma si è ripianificato in tempo per ammortizzare il carico di lavoro medio\\
         \hline
         RSa &
         progettazione &
