--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -71,7 +71,7 @@ La seguente tabella rappresenta la ridistribuzione oraria dei ruoli per ogni com
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}[h!] { C{3.5cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{2cm}}
-\caption{Rististribuzione oraria preventivo a finire}\\
+\caption{Ridistribuzione oraria preventivo a finire}\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Membro del gruppo}} & 
@@ -93,9 +93,12 @@ La seguente tabella rappresenta la ridistribuzione oraria dei ruoli per ogni com
 \GG{}                     & -  & 8 & 9 & 23 & 35 & 27 & 102 \\
 \textbf{Ore totali ruolo(variazione)} & 52 & 59 & 45(+16) & 133(-9) & 215(-12) & 208(-10) & 712(-15) \\
 
-		
+
 \end{longtable}
+
+\clearpage		
 \begin{figure}[h!]
+	\centering
 	\caption{Istogramma di ridistribuzione oraria del preventivo a finire}
     \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoPreventivoaFinireProj.png}  
 \end{figure} 
