fix registro modifiche/comandi

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -1,8 +1,8 @@
 \newcommand{\Titolo}{Piano di Progetto}
 
-\newcommand{\Approvatore}{Giovanni Grigoletto}
-\newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto}
-\newcommand{\Verificatori}{Alessio Trevisan \newline Edoardo Caregnato \newline Giovanni Grigoletto}
+\newcommand{\Approvatore}{Edoardo Caregnato}
+\newcommand{\Redattori}{Elvis Murtezan \newline Edoardo Caregnato}
+\newcommand{\Verificatori}{Alessio Trevisan \newline Giovanni Grigoletto}
 \newcommand{\Responsabile}{}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
