--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -13,6 +13,49 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
+
+        2.0.0  & 
+        2021-03-08  & 
+        Approvazione& 
+        Edoardo Caregnato & 
+        \responsabile{} \\
+        
+        1.1.0  & 
+        2021-03-05  & 
+        Verifica& 
+        Alessio Trevisan, Giovanni Grigoletto & 
+        \verificatore{} \\
+
+        1.0.3  & 
+        2021-02-23  & 
+        Stesura §Appendice & 
+        Elvis Murtezan & 
+        \responsabile{} \\
+
+        1.0.2  & 
+        2021-02-18  & 
+        Stesura §6  & 
+        Edoardo Caregnato & 
+        \responsabile{} \\
+        
+        1.0.1  & 
+        2021-02-12  & 
+        Correzione ed aggiornamento §4, §5 & 
+        Elvis Murtezan & 
+        \responsabile{} \\
+
+        1.0.1  & 
+        2021-02-10  & 
+        Verifica §1, §2, §3 & 
+        Alessio Trevisan, Giovanni Grigoletto & 
+        \verificatore{} \\
+        
+        1.0.1  & 
+        2021-02-10  & 
+        Aggiornamento §1, §2, §3 & 
+        Elvis Murtezan & 
+        \responsabile{} \\
+
         1.0.0  & 
         2021-01-10  & 
         Approvazione & 
