--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/TracciamentoDecisioni/main.tex
@@ -8,7 +8,7 @@
             \item \glo{Infura}: in quanto servizio via \glo{cloud} più leggero e di facile utilizzo, è stato ritenuto il più appropriato da adottare.
         \end{itemize}
     \item iniziare a valutare e prendere confidenza con strumenti quali \glo{Docker}, \glo{Docker Compose} e \glo{Minikube};
-    \item creare un gruppo \glo{Telegram} con i membri del gruppo ed il Dott. Patera (in seguito all'aperta disponibilità di quest'ultimo), per agevolare eventuali comunicazioni veloci;
+    \item creare un gruppo \glo{Telegram} con i membri del gruppo ed il Dott. Patera (in seguito all'aperta disponibilità di quest'ultimo), per agevolare eventuali comunicazioni veloci.
 \end{itemize}
 
 Non è stata fissata una data precisa per il prossimo incontro. Si prevede in ogni caso che questo verrà probabilmente svolto nell'arco della prossima settimana rispetto alla data corrente.
