--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/DettaglioRiunione/main.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/DettaglioRiunione/main.tex
@@ -1,4 +1,4 @@
-Per meglio discutere riguardo l'utilizzo di \glo{Blockchain},  il Dott. Lorenzo Patera (principale contatto aziendale del gruppo) ha esteso la partecipazione ai suoi colleghi Fabrizio Nervegna ed Emanuele Pagliara, esperti sulla tecnologia in questione.
+Per meglio discutere riguardo l'utilizzo di \glo{Blockchain},  il Dott. Lorenzo Patera (principale contatto aziendale del gruppo) ha esteso la partecipazione ai suoi colleghi Fabrizio Nervegna ed Emanuele Pagliara, esperti in merito alla tecnologia in questione.
 Principali argomenti di discussione dell'incontro:
 \begin{enumerate}
     \item \textbf{RFID}:
