--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/DettaglioRiunione/main.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/DettaglioRiunione/main.tex
@@ -3,14 +3,14 @@ Principali argomenti di discussione dell'incontro:
 \begin{enumerate}
     \item \textbf{RFID}:
         \begin{itemize}
-            \item richiesta all'azienda disponibilità a fornire al gruppo dei tag fisici per poter effettuare dei test pratici. Riscontro positivo con consiglio di effettuare delle simulazioni, per il momento.
+            \item richiesta all'azienda disponibilità a fornire al gruppo dei tag fisici per poter effettuare dei test pratici. Riscontro positivo con consiglio di effettuare delle simulazioni, per il momento;
             \item discussione su eventuali tecnologie alternative nel caso risultasse difficile o impraticabile l'utilizzo di \glo{RFID}. Alternative discusse: \glo{WiFi}, \glo{Bluetooth} o \glo{QR Code}.
         \end{itemize}
     \item \textbf{Blockchain}:
         \begin{itemize}
             \item consigli per meglio ottimizzarne l'utilizzo, riguardo la strutturazione ed i dati da implementare;
             \item quali informazioni fosse più conveniente salvare in un proprio database, quali mantenere pubbliche e quali invece private; 
-            \item consigli sull'utilizzo di chiavi \glo{hash} ed identificativi di transazione.
+            \item consigli sull'utilizzo di chiavi \glo{hash} ed identificativi di transazione;
             \item considerazioni sull'utilità e l'effettivo utilizzo della tecnologia da parte di un ente esterno.
         \end{itemize}
     \item \textbf{Linguaggi e strumenti consigliati}:\\
