--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
@@ -9,7 +9,7 @@
     La pianificazione sarà la seguente:
     \begin{itemize}
     \item correzione della documentazione;
-    \item analisi di eventuale criticità dell'utilizzo della tecnologia NFC ed eventualmente concordare con il proponente una soluzione alternativa;
+    \item analisi di eventuali criticità nell'utilizzo della tecnologia NFC con discussione su possibili soluzioni alternative;
     \item raffinamento dell'analisi;
     \item inizializzazione dell'iinfrastruttura;
     \item progettazione architetturale dell'applicazione;
