--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
@@ -11,7 +11,7 @@
     \item correzione della documentazione;
     \item analisi di eventuali criticità nell'utilizzo della tecnologia NFC con discussione su possibili soluzioni alternative;
     \item raffinamento dell'analisi;
-    \item inizializzazione dell'iinfrastruttura;
+    \item inizializzazione dell'infrastruttura;
     \item progettazione architetturale dell'applicazione;
     \item implementazione delle componenti più critiche ed essenziali ai fini del \glo{PoC}, ovvero:
         \begin{itemize}
