--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
@@ -31,7 +31,7 @@
     \end{longtable}
 
     \begin{longtable}{ C{5cm} C{4cm} C{5cm} }
-        \caption{Tabella stack tecnologico di Sviluppo}                                                                                 \\
+        \caption{Tabella stack tecnologico di sviluppo}                                                                                 \\
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Contesto di Utilizzo}} & \textcolor{\secondaryColor}{\textbf{Motivazione}}\\ \endhead
         {Android} & {Per lo sviluppo del app mobile}   & {La maggior parte dei componenti ha un dispositivo con OS Android e la relativa libreria è molto ben documentata}\\
