--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
@@ -34,7 +34,7 @@
         \caption{Tabella stack tecnologico di sviluppo}                                                                                 \\
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Contesto di Utilizzo}} & \textcolor{\secondaryColor}{\textbf{Motivazione}}\\ \endhead
-        {Android} & {Per lo sviluppo del app mobile}   & {La maggior parte dei componenti ha un dispositivo con OS Android e la relativa libreria è molto ben documentata}\\
+        {Android} & {Per lo sviluppo dell'applicazione mobile}   & {La maggior parte dei componenti ha un dispositivo con OS Android e la relativa libreria è molto ben documentata}\\
         {Kotlin} & {Per lo sviluppo Nativo dell app mobile (utente)} & {Facile leggibilità ed è consigliato da Google} \\
         {Typescript} & {Per lo sviluppo relativo all'applicazione Web (Admin)} & { Facilita la scrittura di codice JavaScript } \\
         {MongoDB} & {Per il database} & { Rende l'integrazione di dati di applicazioni (con mole di dati alta) più facile e veloce} \\
