--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
@@ -35,7 +35,7 @@
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Contesto di Utilizzo}} & \textcolor{\secondaryColor}{\textbf{Motivazione}}\\ \endhead
         {Android} & {Per lo sviluppo dell'applicazione mobile}   & {La maggior parte dei componenti ha un dispositivo con OS Android e la relativa libreria è molto ben documentata}\\
-        {Kotlin} & {Per lo sviluppo Nativo dell app mobile (utente)} & {Facile leggibilità ed è consigliato da Google} \\
+        {Kotlin} & {Per lo sviluppo nativo dell app mobile (utente)} & {Facile leggibilità ed è consigliato da Google} \\
         {Typescript} & {Per lo sviluppo relativo all'applicazione Web (Admin)} & { Facilita la scrittura di codice JavaScript } \\
         {MongoDB} & {Per il database} & { Rende l'integrazione di dati di applicazioni (con mole di dati alta) più facile e veloce} \\
         {RabbitMQ} & {Per garantire la continuità del servizio} & {Per rendere l'applicazione quasi sempre disponibile e con grande affidabilità} \\
