--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/TracciamentoDecisioni/main.tex
@@ -44,7 +44,7 @@
         {Keycloak} & {Logica di Login} & {Facilita l'implementazione di logiche relative all'accesso autorizzato} \\
         {Truffle framework} & {Testing comunicazione blockchain} & {Facilita lo sviluppo e il testing di applicazioni dove è richiesto l'utilizzo di blockchain basate su Ethereum} \\
         {Solidity} & {Comunicazione blockchain per salvare l'hash} & {Consente di creare contratti facili da sviluppare e sicuri (curva di apprendimento esponenziale)} \\
-        {NestJS} & {Beckend logica applicazione} & {Facilita l'implementazione di codice JavaScript lato backend} \\
+        {NestJS} & {Backend logica applicazione} & {Facilita l'implementazione di codice JavaScript lato backend} \\
         {NodeJS} & {Per lo sviluppo della parte beckend e frontend} & {Facilita la scrittura di codice Javascript includendo diversi moduli} \\
     \end{longtable}
     
