--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
@@ -11,6 +11,6 @@ I punti toccati sono i seguenti:
 \item presentato e spiegato il funzionamento del back-end e delle tecnologie utilizzate;
 \item presentata la documentazione compilata automaticamente dal codice sorgente per chiamare le api \glo{REST} esposte dal back-end;
 \item presentato il funzionamento delle tecnologie utilizzate dall'app Android;
-\item suddivizione delle tecnologie da esporre alla presentazione pre la Technology Baseline.
+\item suddivisione delle tecnologie da esporre alla presentazione per la Technology Baseline.
 \end{itemize}
 
