--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
@@ -1,7 +1,7 @@
-Durante questo meeting si è cercato di satbilire alcune piccolezze riguardo i documenti, e di mostrare mostrare il funzionamento del \glo{PoC}, sia la parte back-end, sia l'applicazione Android.
+Durante il presente meeting sono state ri-discusse alcune modifiche effettuate sui documenti ed è stato osservato il funzionamento del \glo{PoC}, sia nela parte back-end che per quanto riguarda l'applicazione Android.
 I punti toccati sono i seguenti:
 \begin{itemize}
-   \item discussione su:
+\item discussione su:
    \begin{itemize}
       \item modifiche dell'Analisi dei requisiti;
       \item aggiornamenti delle Norme di progetto;
